feat: assign schedules to employees (#598)
